# doctype_permission

./: README.md  pyproject.toml
doctype_permission/: __init__.py  hooks.py  modules.txt  utils.py
doctype_permission/custom/: db_query.py  permissions.py
doctype_permission/doctype_permission/: utils.py
doctype_permission/doctype_permission/doctype/doctype_permission/: doctype_permission.js  doctype_permission.json  doctype_permission.py  test_doctype_permission.py
doctype_permission/doctype_permission/doctype/doctype_permission_condition/: doctype_permission_condition.json  doctype_permission_condition.py
doctype_permission/doctype_permission/doctype/doctype_permission_level/: doctype_permission_level.js  doctype_permission_level.json  doctype_permission_level.py  test_doctype_permission_level.py
doctype_permission/fixtures/: doctype_permission_level.json
